<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/popup_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="82dp">

        <EditText
            android:id="@+id/lecture_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/lecture"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/classroom_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/classroom"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/professor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/professor"
            android:importantForAutofill="no"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/day_select"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/daySelect" />

            <Button
                android:id="@+id/start_time_select"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/startTimeSelect"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/end_time_select"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/endTimeSelect"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <Button
            android:id="@+id/background_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/backgroundSelect"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/popupOk_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/popupOk" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>