<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/click_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/click_lecture"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/textview"
            android:autoSizeTextType="uniform"
            android:visibility="visible"
            />

        <EditText
            android:id="@+id/click_editLecture"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:hint="@string/lecture"
            android:autoSizeTextType="uniform"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/click_classroom"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/textview"
            android:autoSizeTextType="uniform"
            />

        <EditText
            android:id="@+id/click_editClassroom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/classroom"
            android:autoSizeTextType="uniform"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/click_professor"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/textview"
            android:autoSizeTextType="uniform"/>

        <EditText
            android:id="@+id/click_editProfessor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/professor"
            android:autoSizeTextType="uniform"
            android:visibility="gone"
            />

<!--        <TextView-->
<!--            android:id="@+id/click_time"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="30dp"-->
<!--            android:text="@string/textview"-->
<!--            />-->

        <Button
            android:id="@+id/popupDelete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/popupDelete"/>

        <Button
            android:id="@+id/popupChange_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/popupChange"/>

        <Button
            android:id="@+id/change_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/popupCancel"
            android:visibility="gone"/>

        <Button
            android:id="@+id/change_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/popupOk"
            android:visibility="gone"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>